# system-info-exporter

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
config/: default.toml
deploy/kubernetes/: README.md  configmap.yaml  daemonset.yaml  deployment.yaml  namespace.yaml  service.yaml  servicemonitor.yaml
docs/: CHANGELOG.md  build-optimization.md  multi-arch-build.md
src/: config.rs  error.rs  main.rs  metrics.rs
src/api/: handlers.rs  mod.rs
